fable/test/valid/real_array_sum.f
      program prog
      real a(2)
      real sum_a
      sum_a = a(1) + a(2)
      end
