fable/test/semantic_error/intrinsic_dimension.f
      program prog
      intrinsic nint
      dimension nint(2)
      end
